<?xml version="1.0"?>
<package format="2">
  <name>glim_ros</name>
  <version>1.0.2</version>
  <description>3D LiDAR-IMU Mapping Framework</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>glim</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>roslib</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>

</package>

